ENYO-2745: Use translate 100% instead of 50% in lightPanels Issue: When container div is have floating point left as a position value, some font are not cleanly rendered. We noticed that this issue doesn't happens when we change container position as interger value. We fixed a gap between panel issue (ENYO-2384) by transitioning container but not individual panel. And we used 50% value when positioning panel.
Fix:
This fix is change all the 200% and 50% values as 100%. So, remove
all the chances of floating point value on any divide calculation.

Enyo-1.0-DCO-Signed-off-by: Kunmyon Choi <kunmyon.choi@lge.com>

--- a/src/LightPanels/LightPanels.less
+++ b/src/LightPanels/LightPanels.less
@@ -18,8 +18,8 @@
 		}
 		&.backwards {
 			> .panels-container {
-				transform: translateX(-50%);
-				-webkit-transform: translateX(-50%);
+				transform: translateX(-100%);
+				-webkit-transform: translateX(-100%);
 
 				> * {
 					transform: translateX(100%);
@@ -34,11 +34,11 @@
 		}
 
 		> .panels-container {
-			width: 200%;
+			width: 100%;
 			height: 100%;
 
 			> * {
-				width: 50%;
+				width: 100%;
 			}
 		}
 	}
@@ -54,8 +54,8 @@
 		}
 		&.backwards {
 			> .panels-container {
-				transform: translateY(-50%);
-				-webkit-transform: translateY(-50%);
+				transform: translateY(-100%);
+				-webkit-transform: translateY(-100%);
 
 				> * {
 					transform: translateY(100%);
@@ -71,10 +71,10 @@
 
 		> .panels-container {
 			width: 100%;
-			height: 200%;
+			height: 100%;
 
 			> * {
-				height: 50%;
+				height: 100%;
 			}
 		}
 	}
